Fix T48388: Undo history sculpt mode not visible